--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ build_flags =
 	-IDrivers/STM32F1xx_HAL_Driver/Inc/Legacy
 	-std=c99
 	-Wl,-u_printf_float
-	-Os
+	-O3
 	-lnosys
 	-lc_nano
 build_src_filter = +<Core/Src>+<startup_stm32f103xe.s>+<Drivers/>
@@ -28,6 +28,7 @@ board_build.ldscript = ./STM32F103RCTx_FLASH.ld
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
+lib_ldf_mode = deep+
 
 [platformio]
 src_dir = ./
