--- a/platformio.ini
+++ b/platformio.ini
@@ -28,6 +28,7 @@ board_build.ldscript = ./STM32F103RCTx_FLASH.ld
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
+lib_ldf_mode = deep+
 
 [platformio]
 src_dir = ./
