移植完成的代码，测试通过

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.ino": "cpp",
         "compiler.h": "c",
         "port.h": "c",
-        "kalman.h": "c"
+        "kalman.h": "c",
+        "ssd1306.h": "c",
+        "usart.h": "c"
     }
 }
