--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,13 @@ build_flags =
 	-IDrivers/CMSIS/Device/ST/STM32F1xx/Include
 	-IDrivers/STM32F1xx_HAL_Driver/Inc
 	-IDrivers/STM32F1xx_HAL_Driver/Inc/Legacy
-	-std=c99
+	-std=gnu99
 	-Wl,-u_printf_float
 	-O3
 	-lnosys
 	-lc_nano
+	-Wno-format-overflow
+	-Wno-unused-variable
 build_src_filter = +<Core/Src>+<startup_stm32f103xe.s>+<Drivers/>
 board_build.ldscript = ./STM32F103RCTx_FLASH.ld
 upload_protocol = stlink
