--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "kalman.h": "c",
         "ssd1306.h": "c",
         "usart.h": "c",
-        "tim.h": "c"
+        "tim.h": "c",
+        "deca_device_api.h": "c",
+        "stdio.h": "c",
+        "deca_types.h": "c"
     }
 }
